Closed
Bug 1882942
Opened 2 years ago
Closed 2 years ago
dist/include/mozilla/PseudoStyleType.h:85:16: error: unknown type name 'size_t'
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
125 Branch
| Tracking | Status | |
|---|---|---|
| firefox125 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
This happens when building the iOS port prototype with --disable-unified-build.
dist/include/mozilla/PseudoStyleType.h:85:16: error: unknown type name 'size_t'
85 | static const size_t kEagerPseudoCount = 4;
| ^
| Assignee | ||
Comment 1•2 years ago
|
||
Updated•2 years ago
|
Severity: -- → S3
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/5e0ad7c61c7b
Add missing header for size_t. r=dholbert
Comment 3•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox125:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•