Bug 1882942 - Add missing header for size_t. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D203219