layout/style/PseudoStyleType.h
@@ -7,6 +7,7 @@
 #ifndef mozilla_PseudoStyleType_h
 #define mozilla_PseudoStyleType_h
 
+#include <cstddef>
 #include <cstdint>
 #include <iosfwd>
 
